--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -264,14 +264,14 @@
                             </header>
                         </div>
                     </div>
-                    <img src="/images/workshop.jpeg" alt="Leafs"
+                    <img src="/images/workshop_new.jpeg" alt="Leafs"
                         class="w-full h-full object-cover sm:h-screen sm:w-4/12">
                 </div>
             </div>
             <br>
             <div class="sticky top-0 min-h-screen flex flex-col items-center justify-center bg-gray-900 text-white">
                 <div class="flex flex-wrap h-full">
-                    <img src="/images/networking.jpg" alt="Leafs"
+                    <img src="/images/networking_new.jpg" alt="Leafs"
                         class="w-full h-auto object-cover sm:h-screen sm:w-4/12 lg:mt-0 sm:mt-10">
                     <div class="w-full sm:w-8/12 mb-10">
                         <div class="container mx-auto h-full sm:p-10 flex flex-col justify-center">
@@ -327,7 +327,7 @@
                             </header>
                         </div>
                     </div>
-                    <img src="/images/competitions.jpg" alt="Leafs"
+                    <img src="/images/competitions_new.jpg" alt="Leafs"
                         class="w-full h-full object-cover sm:h-screen sm:w-4/12">
                 </div>
             </div>
@@ -343,11 +343,10 @@
                             <span class="text-white">init</span>()<br><span class="text-white">ASSOCIATION</span>
                         </h1>
                         </p>
-                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%]">Lorem ipsum dolor sit amet
-                            consectetur adipisicing
-                            elit. Eos, fugit non. Incidunt dolorum adipisci, tempore asperiores nemo odio facere
-                            officiis enim animi
-                            placeat eaque nesciunt alias beatae id, at dicta.</p>
+                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%]">The Student Association of the Department of Information Technology at Amal Jyothi College of
+                    Engineering fosters innovation, collaboration, and technical excellence among students. It aims to
+                    provide opportunities for skill development, leadership, and community engagement in the field of
+                    IT.</p>
 
                     </div>
                     <div class="md:w-[316px] ">
@@ -392,7 +391,7 @@
                             </div>
                             <div class="ml-[18px]">
                                 <a href="mailto:help@lorem.com"
-                                    class="font-Inter text-[14px] font-medium text-[#fff]">Divisional BLock A,<br> Amal
+                                    class="font-Inter text-[14px] font-medium text-[#fff]">Divisional Block A,<br> Amal
                                     Jyothi College of Engineering
                                 </a>
 
