--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -415,6 +415,9 @@
                                 <li class="mt-[15px]"><a
                                         class="text-deutziawhite hover:text-deutziawhite/80 font-inter text-[15px] font-normal hover:font-semibold"
                                         href="/contactus">Contact</a></li>
+                                <li class="mt-[15px]"><a
+                                        class="text-deutziawhite hover:text-deutziawhite/80 font-inter text-[15px] font-normal hover:font-semibold"
+                                        href="/about">About Us</a></li>
 
                             </ul>
                         </div>
